# stock_research_data_warehouse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
stock_market_research_data_warehouse/: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  airflow_settings.yaml.example  docker-compose.override.yml  pyproject.toml
stock_market_research_data_warehouse/.astro/: config.yaml
stock_market_research_data_warehouse/dags/indexes/: extract_index_holdings.py  extract_index_holdings_factory.py
stock_market_research_data_warehouse/dags/stocks/: extract_index_holdings_stock_history.py  extract_index_holdings_ticker_history.py  extract_sp500_history.py
stock_market_research_data_warehouse/docker/postgres/: 02-init-user.sh  init-databases.sql
stock_market_research_data_warehouse/include/: config.py  raw_files_column_mappings.yaml  utils.py
stock_market_research_data_warehouse/include/common/: constants.py
stock_market_research_data_warehouse/include/indexes/: constants.py  index_holdings.py  indexes.yaml.example
stock_market_research_data_warehouse/include/seeds/: yfinance_suffixes.csv
stock_market_research_data_warehouse/include/stocks/: constants.py  index_history.py  stock_history.py
stock_market_research_data_warehouse/include/stocks/staging_schemas/: historical_data_sp500.py
stock_market_research_data_warehouse/include/web_scraping/: __init__.py  base_service.py  constants.py  ishares.py
stock_market_research_data_warehouse/include/web_scrapping/: helpers.py  ishares.py
stock_market_research_data_warehouse/plugins/dags/: __init__.py  dag_factory.py
stock_market_research_data_warehouse/plugins/operators/: __init__.py  enforce_latest_file_operator.py  extract_to_staging_operator.py
stock_market_research_data_warehouse/terraform/: README.md  attachments.tf  buckets.tf  main.tf  outputs.tf  policies.tf  setup.sh  terraform.tfvars.example  users.tf  variables.tf
stock_market_research_data_warehouse/tests/include/: test_utils.py
stock_market_research_data_warehouse/tests/include/indexes/: test_index_holdings.py
stock_market_research_data_warehouse/tests/include/stocks/: test_index_history.py  test_stock_history.py
stock_market_research_data_warehouse/tests/include/web_scrapping/: test_base_service.py  test_helpers.py  test_ishares.py
stock_market_research_data_warehouse/tests/plugins/dags/: test_dag_factory.py
stock_market_research_data_warehouse/tests/plugins/operators/: test_enforce_latest_file_operator.py  test_extract_to_staging_operator.py
