[project]
name = "stock_market_research_data_warehouse"
version = "0.1"
description = "Ignestion and processing pipelines for stock market research project"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "apache-airflow[celery,postgres,amazon]==3.0.3",
    "apache-airflow-providers-common-sql==1.27.4",
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1,<3.0.0",
    "playwright>=1.48.0",
    "psycopg2-binary==2.9.10",
    "pyarrow==21.0.0",
    "python-dotenv",
    "requests>=2.32.4",
    "yfinance>=0.2.65,<0.3.0",
]

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "ipython",
    "pre-commit",
    "pycln",
    "pytest",
    "pytest-testmon",
    "reorder-python-imports",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
    "data*",
    "terraform*",
    "docs*",
    "scripts*",
    ".venv*",
    "env*",
    "__pycache__*"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = "True"
log_cli_level = "INFO"
norecursedirs = ["data", "stock_market_research_data_warehouse/data", ".astro", ".venv", ".git"]

[flake8]
ignore = 'D100,W503,E203'
max-line-length = 100
